--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 世界に一つだけの花
+title: "世界に一つだけの花"
 email: yuanliuji66@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  風にまたがったあなたの夢 一緒に見れたらいいのにな
+  "風にまたがったあなたの夢 一緒に見れたらいいのにな"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
