--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: Roku_sixology
 github_username:  RokuSixology
 
 # Build settings
-theme: jekyll-theme-kagami
+# theme: jekyll-theme-kagami
 
 plugins:
   - jekyll-feed
